# Binx

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  ROADMAP.md  SPEC_gwas_fastgwas.md
.github/workflows/: parity.yml  release.yml
binx-cli/: Cargo.toml
binx-cli/src/: main.rs
binx-cli/tests/: parity.rs
binx-convert/: Cargo.toml
binx-core/: Cargo.toml
binx-core/src/: lib.rs
binx-dosage/: Cargo.toml
binx-dosage/src/: io.rs  lib.rs  main.rs  math.rs
binx-dosage/src/io/: matrix.rs  mod.rs  vcf.rs
binx-dosage/src/io/output/: beagle.rs  gwaspoly.rs  matrix.rs  mod.rs  plink.rs  stats.rs  vcf.rs
binx-dosage/src/model/: mod.rs  norm.rs  norm_turbo.rs
binx-gwas/: Cargo.toml
binx-gwas/src/: lib.rs
binx-io/src/: lib.rs
binx-kinship/: Cargo.toml
binx-kinship/src/: lib.rs
binx-multigwas/: Cargo.toml
binx-plotting/: Cargo.toml
binx-plotting/src/: ld.rs  lib.rs  manhattan.rs  qq.rs
binx-plotting/src/output/: mod.rs
binx-types/: Cargo.toml
crates/binx-cli/: Cargo.toml
crates/binx-cli/src/: main.rs
crates/binx-convert/src/: main.rs
crates/binx-dosage/: Cargo.toml  README.md
crates/binx-dosage/src/: lib.rs  main.rs
crates/binx-dosage/src/io/output/: beagle.rs  mod.rs  stats.rs  vcf.rs
crates/binx-dosage/src/model/: norm_turbo.rs
crates/binx-gwas/src/: lib.rs
crates/binx-io/: Cargo.toml
crates/binx-io/src/: lib.rs
crates/binx-kinship/: Cargo.toml
crates/binx-multigwas/src/: lib.rs
crates/binx-plotting/: Cargo.toml
crates/binx-plotting/src/: themes.rs
crates/binx-types/: Cargo.toml
crates/binx-types/src/: lib.rs
crates/gwaspoly-rs/: Cargo.toml  README.md  TODO.md
crates/gwaspoly-rs/src/: gwaspoly.rs  io.rs  lib.rs  parallel.rs  set_k.rs  types.rs
crates/gwaspoly-rs/src/qtl/: get_qtl.rs  mod.rs
crates/gwaspoly-rs/tests/: parallel_accuracy.rs
crates/rrblup-rs/: Cargo.toml  README.md
crates/rrblup-rs/benches/: benchmark.rs
crates/rrblup-rs/src/: a_mat.rs  kin_blup.rs  lib.rs  mixed_solve.rs
crates/rrblup-rs/tests/: generate_kinblup_reference.R  generate_reference_values.R  kinblup_comparison.rs
docs/: book.toml  gwaspoly_math.md
docs/src/: README.md  SUMMARY.md  citation.md
docs/src/commands/: convert.md  dosage.md  gwas.md  kinship.md  overview.md  plot.md  qtl.md  threshold.md
docs/src/development/: architecture.md  changelog.md  contributing.md
docs/src/getting-started/: input-formats.md  installation.md  quickstart.md
docs/src/reference/: faq.md  genetic-models.md  output-formats.md  validation.md
docs/src/tutorials/: first-gwas.md  multi-environment.md  polyploid-analysis.md  vcf-to-results.md
docs/theme/: footer.css  footer.js
gwaspoly-rs/: Cargo.toml  README.md  TODO.md
gwaspoly-rs/src/: gwaspoly.rs  lib.rs  parallel.rs  set_k.rs  threshold.rs
gwaspoly-rs/tests/: parallel_accuracy.rs
rrblup-rs/: Cargo.toml  README.md
rrblup-rs/benches/: benchmark.rs
rrblup-rs/src/: a_mat.rs  kin_blup.rs  lib.rs  mixed_solve.rs  mixed_solve_fast.rs
rrblup-rs/tests/: amat_comparison.rs  benchmark_r.R  generate_amat_reference.R  r_comparison.rs
scripts/: benchmark_gwaspoly.sh  compare_binx_gwaspoly.R
scripts/gwaspoly/: run_parity.R
tests/parity/: README.md
tests/parity/data/potato/: out_binx.tsv  out_gwaspoly.tsv
tests/parity/data/toy/: toy.geno.tsv  toy.pheno.tsv
tests/parity/fixtures/: potato_additive_env.tsv  toy_additive.tsv
