[workspace]
members = [
    "crates/binx-types",
    "crates/binx-io",
    "crates/binx-gwas",
    "crates/binx-multigwas",
    "crates/binx-kinship",
    "crates/binx-cli",
    "crates/binx-dosage",
    "crates/binx-convert",
    "crates/binx-plotting",
    "crates/rrblup-rs",
    "crates/gwaspoly-rs",
]

resolver = "2"
