[package]
name = "binx-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core data structures and IO for binx genomic toolkit"

[dependencies]
anyhow = "1"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"], optional = true }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
