[package]
name = "binx-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core data structures and IO for binx genomic toolkit"

[dependencies]
anyhow = "1"
ndarray = "0.15"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.29"

[dev-dependencies]
tempfile = "3"
