[package]
name = "binx-dosage"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Placeholder to allow enabling BCF-specific code paths when the dependency is added.
bcf = []

[dependencies]
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.16"
itertools = "0.12"
thiserror = "1.0"
argmin = { version = "0.10", features = ["serde1"] }
argmin-math = { version = "0.4", features = ["ndarray_latest-nolinalg"] }
ndarray = { version = "0.15", features = ["serde"] }
flate2 = "1.0"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
