[package]
name = "binx-dosage"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Placeholder to allow enabling BCF-specific code paths when the dependency is added.
bcf = []

[dependencies]
anyhow = "1.0"
statrs = "0.16"
argmin = "0.10"
argmin-math = { version = "0.4", features = ["ndarray_latest-nolinalg"] }
ndarray = "0.15"
flate2 = "1.0"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
