[package]
name = "binx-plotting"
version = "0.1.0"
edition = "2021"
description = "GWAS visualization tools for Binx - Manhattan plots, QQ plots, and more"
license = "MIT"

[dependencies]
# Plotting
plotters = "0.3"

# Serialization for data input
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"

# Error handling
anyhow = "1"

# For LD calculations
binx-core = { path = "../binx-core" }
ndarray = "0.15"
rand = "0.8"

# Optional: PNG output (requires additional system deps)
[features]
default = ["svg"]
svg = []
png = ["plotters/bitmap_encoder"]

[dev-dependencies]
tempfile = "3"
