[package]
name = "binx-cli"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "CLI frontend for the binx genomic analysis toolkit"

[[bin]]
name = "binx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
binx-types = { path = "../binx-types" }
binx-multigwas = { path = "../binx-multigwas" }
binx-kinship = { path = "../binx-kinship" }
binx-dosage = { path = "../binx-dosage" }
binx-plotting = { path = "../binx-plotting", features = ["png"] }
binx-gwas = { path = "../binx-gwas" }
gwaspoly-rs = { path = "../gwaspoly-rs" }

[dev-dependencies]
csv = "1.4"
tempfile = "3"
