[package]
name = "binx-dosage"
version = "0.1.1"
edition = "2021"
authors = ["Alexander M. Sandercock <sandercock.alex@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Genotype dosage estimation from sequencing read counts using updog-style algorithms"
repository = "https://github.com/alex-sandercock/Binx"
homepage = "https://github.com/alex-sandercock/Binx/tree/main/crates/binx-dosage"
documentation = "https://docs.rs/binx-dosage"
keywords = ["genomics", "genotyping", "polyploid", "dosage", "bioinformatics"]
categories = ["science"]
readme = "README.md"

[features]
default = []
# Placeholder to allow enabling BCF-specific code paths when the dependency is added.
bcf = []

[dependencies]
anyhow = "1.0"
statrs = "0.16"
argmin = "0.10"
argmin-math = { version = "0.4", features = ["ndarray_latest-nolinalg"] }
ndarray = "0.15"
flate2 = "1.0"
rayon = "1.10"
thread_local = "1.1"

[dev-dependencies]
approx = "0.5"
