[package]
name = "binx-io"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "File I/O utilities for binx genomic toolkit (VCF, PLINK, CSV, TSV)"

[dependencies]
anyhow = "1"
csv = "1.4"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
