[package]
name = "gwaspoly-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust implementation of R/GWASpoly package for GWAS in polyploids"

[dependencies]
# Standalone crate - only depends on rrblup-rs (mirrors R architecture where GWASpoly wraps rrBLUP)
rrblup-rs = { path = "../rrblup-rs" }
ndarray = "0.15"
nalgebra = "0.29"
statrs = "0.16"
anyhow = "1"
csv = "1.4"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
