[package]
name = "rrblup-rs"
version = "0.1.0"
edition = "2021"
authors = ["Alexander M. Sandercock <sandercock.alex@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Rust implementation of R/rrBLUP package for mixed model analysis"
repository = "https://github.com/alex-sandercock/Binx"
homepage = "https://github.com/alex-sandercock/Binx/tree/main/crates/rrblup-rs"
documentation = "https://docs.rs/rrblup-rs"
keywords = ["genomics", "blup", "mixed-model", "gwas", "genetics"]
categories = ["science::bioinformatics::genomics"]
readme = "README.md"
exclude = ["benches/", "tests/"]

[dependencies]
ndarray = "0.15"
nalgebra = "0.29"
faer = "0.19"
statrs = "0.16"
anyhow = "1"
csv = "1.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
